# leo_rover_gazebo

./: .gitignore  Dockerfile  README.md  docker-entrypoint.sh
src/leo_rover_description/: CMakeLists.txt  package.xml
src/leo_rover_description/models/diff_drive/: model.sdf
src/leo_rover_description/urdf/: leo_rover_with_sensors.urdf.xacro
src/leo_rover_gazebo/: CMakeLists.txt  README.md  package.xml
src/leo_rover_gazebo/config/: amcl_params_leo.yaml  nav2_params_leo.yaml  slam_params_leo.yaml
src/leo_rover_gazebo/include/leo_rover_gazebo/: BasicSystem.hh  FullSystem.hh
src/leo_rover_gazebo/launch/: nav2.launch.py  navigation.launch.py  slam.launch.py  two_robots.launch.py
src/leo_rover_gazebo/maps/: small_house.world
src/leo_rover_gazebo/models/aruco_0/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_1/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_10/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_11/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_12/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_13/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_14/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_15/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_2/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_3/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_4/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_5/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_6/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_7/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_8/: model.config  model.sdf
src/leo_rover_gazebo/models/aruco_9/: model.config  model.sdf
src/leo_rover_gazebo/models/aws_robomaker_residential_AirconditionerA_01/: model.sdf
src/leo_rover_gazebo/models/aws_robomaker_residential_AirconditionerB_01/: model.sdf
src/leo_rover_gazebo/models/aws_robomaker_residential_BalconyTable_01/: model.sdf
src/leo_rover_gazebo/models/aws_robomaker_residential_Ball_01/: model.sdf
src/leo_rover_gazebo/models/aws_robomaker_residential_Bed_01/: model.sdf
src/leo_rover_gazebo/models/aws_robomaker_residential_Board_01/: model.sdf
src/leo_rover_gazebo/models/aws_robomaker_residential_Carpet_01/: model.sdf
src/leo_rover_gazebo/models/aws_robomaker_residential_ChairA_01/: model.sdf
src/leo_rover_gazebo/models/aws_robomaker_residential_ChairD_01/: model.sdf
src/leo_rover_gazebo/src/: BasicSystem.cc  FullSystem.cc
src/leo_rover_gazebo/worlds/: empty_two_robot.sdf  leo_world.sdf
src/multi_robot_shared_mapping/: package.xml  setup.cfg  setup.py
src/multi_robot_shared_mapping/config/: apriltag_landmarks.yaml  shared_mapping.rviz  slam_leo1.yaml  slam_leo2.yaml
src/multi_robot_shared_mapping/launch/: shared_mapping_demo.launch.py
src/multi_robot_shared_mapping/multi_robot_shared_mapping/: alignment_confidence.py  alignment_state.py  apriltag_detection_node.py  apriltag_inline_model.py  exploration_policy.py  grid_map_matching.py  map_based_aligner.py  map_postprocess.py  map_quality.py  odom_tf_broadcaster.py  recovery_advisor.py  robot_state_registry.py  save_shared_outputs.py  shared_map_merger.py  tag_based_map_aligner.py  tag_landmark_map.py  tag_map_alignment.py
src/multi_robot_shared_mapping/scripts/: generate_apriltag_textures.py  patch_husarion_office_apriltag_world.py
src/multi_robot_shared_mapping/tests/: test_alignment_confidence.py  test_alignment_state.py  test_exploration_policy.py  test_grid_map_matching.py  test_recovery_advisor.py  test_tag_based_map_alignment.py  test_tag_landmark_map.py
(+121 files in other folders)
