<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leo_rover_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo Fortress support for Leo Rover in ROS 2 Humble</description>
  <maintainer email="ardacihan7452@gmail.com">Arda</maintainer>
  <license>Apache 2.0</license>

  <depend>leo_rover_description</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_ign_sim</depend>
  <depend>xacro</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>